plugins {
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.sonarqube' version '6.3.1.5724'
    id 'com.github.spotbugs' version '6.1.3' apply false
}

allprojects {
    group = 'com.example'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'checkstyle'
    apply plugin: 'com.github.spotbugs'
    apply plugin: 'jacoco'
    apply plugin: 'org.sonarqube'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    checkstyle {
        toolVersion = '10.21.4'
        configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
        ignoreFailures = true
    }

    spotbugs {
        ignoreFailures = true
        excludeFilter = file("${rootProject.projectDir}/config/spotbugs/exclude-filter.xml")
    }

    tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
        reports {
            html.required = true
            xml.required = false
        }
    }

    jacocoTestReport {
        dependsOn test
        reports {
            html.required = true
            xml.required = true
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
        finalizedBy jacocoTestReport
        maxParallelForks = 1
        reports {
            junitXml.required = false
            html.required = true
        }
        environment 'DOCKER_API_VERSION', '1.43'
        systemProperty 'DOCKER_API_VERSION', '1.43'
        systemProperty 'api.version', '1.43'
        jvmArgs '-Dnet.bytebuddy.experimental=true'
    }

    sonarqube {
        properties {
            property 'sonar.coverage.exclusions', [
                    '**/*Application.java',
                    '**/application/**',
                    '**/config/**',
                    '**/domain/**',
                    '**/infrastructure/**',
                    '**/interfaces/rest/**',
                    '**/package-info.java'
            ].join(',')
        }
    }
}
